added few more functionality

--- a/mysite/polls/templates/polls/Pay.html
+++ b/mysite/polls/templates/polls/Pay.html
@@ -25,8 +25,8 @@
       </div>
       <div class="container p-3">
       <nav class="nav nav-pills nav-fill">
-        <a class="nav-item nav-link active" href="{% url 'request_view' %}">Request Money</a>
-        <a class="nav-item nav-link" href="#">Send Money</a>
+        <a class="nav-item nav-link" href="{% url 'request_view' %}">Request Money</a>
+        <a class="nav-item nav-link" href="{% url 'sendmoney_view' %}">Send Money</a>
         <a class="nav-item nav-link" href="#">Split Bill</a>
       </nav>
       </div>
