add accountactivity page

--- a/mysite/polls/templates/polls/Pay.html
+++ b/mysite/polls/templates/polls/Pay.html
@@ -20,7 +20,7 @@
     <div class="card" style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">Checking......</h5>
-          <a href="#" class="card-link">$ {{balance_amount.balance}}</a>
+          <a href="{% url 'accountactivity_view' %}" class="card-link">$ {{balance_amount.balance}}</a>
         </div>
       </div>
       <div class="container p-3">
