--- a/mysite/polls/templates/polls/accountactivity.html
+++ b/mysite/polls/templates/polls/accountactivity.html
@@ -1,21 +1,39 @@
 {% include 'polls/navbar.html' %}
-<div class="container">
-    <h1>Activity</h1>
+  <div class="container-fluid text-center p-3">
+    <span>
+    <i class="fa-solid fa-wallet fa-2xl"></i>
+    <h1>Account Activity</h1>
+  </span>
+  </div>
+  <div class="container p-2">
+    <div class="row">
+      <div class="col-lg-12">
+    <form class="form-inline">
+      <input class="form-control mr-sm-2 col-11" type="search" name="searchmail" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+  </div>
+  </div>
+  <div class="container">
     <table class="table table-dark table-striped">
         <thead>
             <tr>
               <th scope="col">Transaction mail id</th>
+              <th scope="col">Transation Date</th>
+              <th scope="col">Transaction Time</th>
               <th scope="col">Amount</th>
-              <th scope="col">Status</th>
             </tr>
           </thead>
           <tbody>
             {% for i in data %}
             <tr>
               <td>{{i.sender_mail}}</td>
-              <td>{{i.amount}}</td>
-              <td>success</td>
+              <td>{{i.datafield}}</td>
+              <td>{{i.timefield}}</td>
+              <td>$ {{i.amount}}</td>
+             
             </tr>
             {% endfor %}
       </table>
-</div>
+    </div>
