--- a/mysite/polls/templates/polls/navbar.html
+++ b/mysite/polls/templates/polls/navbar.html
@@ -6,9 +6,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>{% block title%} my site {%endblock%}</title>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/255c0deab3.js" crossorigin="anonymous"></script>
   <script>
         $('.nav>li').click(function(){
     $('.active').toggleClass("active");
@@ -18,7 +17,8 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand text-light">Currency converter</a>
+    <i class="fa-brands fa-paypal fa-2xl" style="color: #ffffff;"></i>
+    <a class="navbar-brand text-light">Mobile Banking App</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -32,6 +32,9 @@
         </li>
         <li class="nav-item {% if request.path == '/stocks/' %}active{% endif %}">
           <a class="nav-link" href="{% url 'stock_view' %}">Accounts</a>
+        </li>
+        <li class="nav-item {% if request.path == '/appointment/' %}active{% endif %}">
+          <a class="nav-link" href="{% url 'appointment_view' %}">Appointment Tab</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
