--- a/mysite/polls/templates/polls/requestmoney.html
+++ b/mysite/polls/templates/polls/requestmoney.html
@@ -8,8 +8,12 @@
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/255c0deab3.js" crossorigin="anonymous"></script>
     <div class="container-fluid text-center p-3">
+      <span>
+      <i class="fa-solid fa-money-bill-transfer fa-2xl"></i>
         <h1>Request Money</h1>
+      </span>
     <form method="POST" action="{% url 'request_view' %}">
         {% csrf_token %}
         <div class="form-group p-3">
