--- a/mysite/polls/templates/polls/sendmoney.html
+++ b/mysite/polls/templates/polls/sendmoney.html
@@ -1,3 +1,4 @@
+{% include 'polls/navbar.html' %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -7,9 +8,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
   <body>
+    <script src="https://kit.fontawesome.com/255c0deab3.js" crossorigin="anonymous"></script> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+   {% if messages %}
+   {% for message in messages %}
+   <div class="alert alert-success alert-dismissible fade show" role="alert">
+   <p class="text-center">{{message}}</p>
+   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Ok"></button>
+  </div> 
+  {% endfor %}
+   {% endif %}    
     <div class="container-fluid text-center p-3">
+      <span>
+      <i class="fa-solid fa-comments-dollar fa-2xl"></i>
         <h1>Send Money</h1>
+      </span>
     <form method="POST" action="{% url 'sendmoney_view' %}">
         {% csrf_token %}
         <div class="form-group p-3">
@@ -25,5 +38,6 @@
             <button class="btn btn-primary" type="submit" value="submit">Send Money</button>
           </div>
       </form>
+      
 </body>
 </html>
